--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "76d5ce2a-8ab4-4fb6-bd4a-ed950fc6a258"
 authors = ["Keno Fischer <keno@juliacomputing.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+CassetteOverlay = "d78b62d4-37fa-4a6f-acd8-2f19986eb9ee"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+z3_jll = "1bc4e1ec-7839-5212-8f2f-0d16b7bd09bc"
+
 [compat]
 julia = "1"
 
